--- a/SSM/ChasingTheWind-manager/pom.xml
+++ b/SSM/ChasingTheWind-manager/pom.xml
@@ -174,11 +174,16 @@
             <scope>provided</scope>
         </dependency>
         <!--mysql数据库的jdbc连接包-->
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            &lt;!&ndash;新版本使用最多的是6.0.6  但在我的配置中无法使用该版本，报一个很无解的异常&ndash;&gt;-->
+<!--            <version>5.1.39</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <!--新版本使用最多的是6.0.6  但在我的配置中无法使用该版本，报一个很无解的异常-->
-            <version>5.1.39</version>
+            <version>8.0.11</version>
         </dependency>
         <!-- 导入dbcp的jar包，用来在applicationContext.xml中配置数据库 -->
         <!--        <dependency>-->
