--- a/SSM/ChasingTheWind-api/pom.xml
+++ b/SSM/ChasingTheWind-api/pom.xml
@@ -28,6 +28,11 @@
             <version>1.2.17</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.11</version>
+        </dependency>
     </dependencies>
 
     <properties>
