--- a/SSM/ChasingTheWind-mapper/pom.xml
+++ b/SSM/ChasingTheWind-mapper/pom.xml
@@ -47,6 +47,12 @@
         <version>3.5.1</version>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>8.0</version>
+        <scope>compile</scope>
+    </dependency>
 </dependencies>
 
     <build>
