--- a/SSM/ChasingTheWind-manager/pom.xml
+++ b/SSM/ChasingTheWind-manager/pom.xml
@@ -102,6 +102,12 @@
             <version>1.2.4</version>
         </dependency>
         <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
+        <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
