--- a/SSM/ChasingTheWind-manager/pom.xml
+++ b/SSM/ChasingTheWind-manager/pom.xml
@@ -279,7 +279,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
-
+<!--        定时操作-->
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.3.0</version>
+        </dependency>
         <!--============servlet jsp jstL等依赖==========-->
 
         <dependency>
@@ -287,6 +292,12 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
         </dependency>
 
     </dependencies>
